# Sovereign-Sync

./: .env.example  .env.template  CMakeLists.txt  Dockerfile  README.md  README_old.md  USAGE.md  docker-compose.yml  main.py  pii_filter.c  pii_filter.h  requirements.txt  setup.sh  test_integration.py  vault.py
docs/: ARCHITECTURE.md  DPDP_COMPLIANCE.md
gateway/: gateway.py  vault.py  vault_old.py
include/: pii_scanner.h
src/: pii_scanner.c
tests/: test_pii_scanner.c
